laying the foundation

--- a/OlofOchRia/css/custom.css
+++ b/OlofOchRia/css/custom.css
@@ -6,7 +6,7 @@ body {
 }
 
 a {
-    color: yellowgreen;
+    color: #805980;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -28,7 +28,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url('../images/header.jpg');
+    background-image: url('../img/olof_och_ria_pussas.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
