--- a/OlofOchRia/css/custom.css
+++ b/OlofOchRia/css/custom.css
@@ -6,7 +6,7 @@ body {
 }
 
 a {
-    color: #805980;
+    color: ghostwhite;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -18,6 +18,7 @@ a:focus {
 }
 
 p {
+    color: ghostwhite;
     font-size: 16px;
     line-height: 1.5;
 }
@@ -25,15 +26,13 @@ p {
 header {
     position: relative;
     width: 100%;
+    padding 100px;
     min-height: auto;
     text-align: center;
     color: #fff;
     background-image: url('../img/olof_och_ria_pussas.jpg');
     background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
     background-size: cover;
-    -o-background-size: cover;
 }
 
 header .header-content {
@@ -96,7 +95,7 @@ header .header-content .header-content-inner p {
 
 .intro {
 	color: #fff;
-    background-color: #805980;
+    background-color: #402A59;
     padding: 70px 0;
     text-align: center;
 }
@@ -143,18 +142,6 @@ header .header-content .header-content-inner p {
     display: inline-block;
     vertical-align: middle;
 }
-
-.item-1 {
-	background: url('../images/writing.jpg');
-	}
-	
-.item-2 {
-	background: url('../images/concert.jpg');
-	}
-	
-.item-3 {
-	background: url('../images/pencil_sharpener.jpg');
-	}
 		
 .item-1,
 .item-2,
@@ -169,7 +156,7 @@ header .header-content .header-content-inner p {
 
 .page-footer .contact {
 	padding: 100px 0;
-	background-color: #805980;
+	background-color: lightslategrey;
 	color: #fff;
 	}
 
@@ -187,6 +174,7 @@ header .header-content .header-content-inner p {
 .page-footer .small-print {
 	padding: 50px 0 40px;
 	font-weight: 300;
+    background: #402A59;
 	}
 
 .text-light {
@@ -202,27 +190,27 @@ header .header-content .header-content-inner p {
 }
 
 .navbar-default .navbar-header .navbar-brand {
-    color: #805980;
+    color: #402A59;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-    color: #eb3812;
+    color: #402A59;
 }
 
 .navbar-default .nav > li>a,
 .navbar-default .nav>li>a:focus {
-    color: #222;
+    color: #402A59;
 }
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: yellowgreen;
+    color: #402A59;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: yellowgreen!important;
+    color: #402A59;!important;
     background-color: transparent;
 }
 
@@ -235,6 +223,8 @@ header .header-content .header-content-inner p {
     .navbar-default {
         border-color: rgba(255,255,255,.3);
         background-color: transparent;
+        
+        font-weight: bold;
     }
 
     .navbar-default .navbar-header .navbar-brand {
@@ -265,22 +255,22 @@ header .header-content .header-content-inner p {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         letter-spacing: 0;
-        color: #805980;
+        color: #402A59;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #331F33;
+        color: #402A59;
     }
 
     .navbar-default.affix .nav > li>a,
     .navbar-default.affix .nav>li>a:focus {
-        color: #222;
+        color: #402A59;
     }
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: yellowgreen;
+        color: #402A59;
     }
 }
 
@@ -428,4 +418,35 @@ img::-moz-selection {
 
 .bg-primary {
     background-color: #331F33;
+}
+
+#clockdiv{
+	font-family: sans-serif;
+	color: #fff;
+	display: inline-block;
+	font-weight: 100;
+	text-align: center;
+	font-size: 30px;
+}
+
+#clockdiv > div{
+	padding: 5px;
+	border-radius: 3px;
+	display:inline-block;
+}
+
+#clockdiv div > span{
+	padding: 15px;
+	border-radius: 3px;
+	background: #402A59;
+    background: #402A59;
+	display: inline-block;
+}
+
+.smalltext{
+	padding-top: 5px;
+	font-size: 12px;
+    border: initial;
+    border-color: #402A59;
+    color: ghostwhite;
 }
